feat: some fixes

--- a/src/html/includes/register.html
+++ b/src/html/includes/register.html
@@ -25,7 +25,7 @@
             <div class="register__body-bottom">
                 <button class="register__btn-signup auth-btn" type="submit">Sign up</button>
             </div>
-            <span class="register__undertext-inner auth-undertext-inner">You already have account? <a class="register__undertext--link auth-undertext-link" href="login-page.html">Log in</a></span>
+            <span class="register__undertext-inner auth-undertext-inner">Already have an account? <a class="register__undertext--link auth-undertext-link" href="login-page.html">Log in</a></span>
         </form>
     </div>
 </section>
