--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -41,6 +41,150 @@
                                 <span class="data-btn-remove"></span>
                             </td>
                         </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
+                        <tr class="user-list__row">
+                            <td class="user-list__data">2</td>
+                            <td class="user-list__data">User2131</td>
+                            <td class="user-list__data">qwerty3131311234</td>
+                            <td class="user-list__data">user31312@mail.ru</td>
+                            <td class="user-list__data">+375339999999</td>
+                            <td class="user-list__data data-btn">
+                                <svg class="edit-data-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                            </td>
+                            <td class="user-list__data data-btn">
+                                <span class="data-btn-remove"></span>
+                            </td>
+                        </tr>
                     </table>
                 </div>
             </div>
