--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -5,7 +5,7 @@
     &:checked {
         ~.tickets-field__droplist {
             opacity: 1;
-            transform: scaleY(100%);
+            transform: scaleY(1);
         }
         ~.tickets-field__toggler {
             .tickets-field__arrow {
@@ -248,6 +248,7 @@
     }
     &__droplist {
         width: 100%;
+        transform-origin: 0 0;
         transform: scaleY(0);
         opacity: 0;
         position: absolute;
