feat: add custom scrollbar

--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -25,10 +25,19 @@
     &__table-container {
         max-height: 575px;
         width: 100%;
-        overflow-y: auto;
+        overflow-y: scroll;
         border: 1px solid var(--palette-primary-main);
-        @include media-breakpoint-down(lg) {
-            overflow-x: auto;
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+            border-radius: 100px;
+            width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--palette-primary-dark);
+            border-radius: 100px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: var(--palette-primary-main);
         }
     }
     &__table {
