--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -9,8 +9,20 @@
     &__container {
         max-height: 575px;
         margin-top: 20px;
-        overflow: scroll;
+        overflow-y: scroll;
         border: 1px solid var(--palette-primary-main);
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+            border-radius: 100px;
+            width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--palette-primary-dark);
+            border-radius: 100px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: var(--palette-primary-main);
+        }
     }
     &__title {
         font-family: var(--typography-fontFamily);
