--- a/src/scss/sections/main/_gallery.scss
+++ b/src/scss/sections/main/_gallery.scss
@@ -28,12 +28,24 @@
         color: var(--palette-primary-text);
     }
     &__body {
-        overflow: auto;
+        overflow: scroll;
         display: flex;
         justify-content: center;
         margin-top: 75px;
         width: 100%;
         height: 100%;
+        &::-webkit-scrollbar {
+            -webkit-appearance: none;
+            border-radius: 100px;
+            width: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--palette-primary-dark);
+            border-radius: 100px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: var(--palette-primary-main);
+        }
         @include media-breakpoint-up(lg) {
             gap: 36px;
         }
