--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -178,6 +178,7 @@
     }
     &__comment-field {
         max-width: 245px;
+        width: 100%;
         height: 150px;
         resize: none;
         padding: 10px;
