feat: some fixes

--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -64,7 +64,7 @@
         </label>
                 <form class="profile__comment">
                     <span class="profile__comment-title">Give feedback</span>
-                    <textarea class="profile__comment-field" name="" id="" cols="30"></textarea>
+                    <textarea class="profile__comment-field" name="" id="" cols="30" placeholder="Write something..."></textarea>
                     <button type="submit" class="profile__comment-btn">Send</button>
                 </form>
             </div>
