feat: some fixes

--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -167,6 +167,7 @@
         }
     }
     &__comment {
+        width: 100%;
         display: flex;
         flex-direction: column;
     }
@@ -177,7 +178,6 @@
         font-size: 20px;
     }
     &__comment-field {
-        max-width: 245px;
         width: 100%;
         height: 150px;
         resize: none;
