--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -74,10 +74,10 @@
         width: 100%;
         max-height: 100vh;
         height: 100vh;
-        padding-bottom: 120px;
+        padding-bottom: 170px;
     }
     &__container {
-        overflow: auto;
+        overflow: scroll;
     }
     &__socials {
         justify-content: center;
