--- a/src/scss/sections/main/_gallery.scss
+++ b/src/scss/sections/main/_gallery.scss
@@ -4,16 +4,6 @@
     height: 100%;
     background-color: var(--palette-primary-main);
     &__container {
-        overflow: hidden;
-        @include media-breakpoint-up(xxl) {
-            height: 1220px;
-        }
-        @include media-breakpoint-between(md, xxl) {
-            height: 1000px;
-        }
-        @include media-breakpoint-down(md) {
-            height: 600px;
-        }
         &::before {
             content: "";
             position: absolute;
@@ -28,12 +18,13 @@
         color: var(--palette-primary-text);
     }
     &__body {
-        overflow: scroll;
+        overflow-y: scroll;
         display: flex;
         justify-content: center;
         margin-top: 75px;
         width: 100%;
         height: 100%;
+        max-height: 600px;
         &::-webkit-scrollbar {
             -webkit-appearance: none;
             border-radius: 100px;
