feat: some fixes

--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -90,7 +90,7 @@
                                 <table class="profile-ticket-list__table">
                                     <tbody>
                                         <tr class="profile-ticket-list__table-row">
-                                            <td class="profile-ticket-list__table-data">ID</td>
+                                            <td class="profile-ticket-list__table-data">№</td>
                                             <td class="profile-ticket-list__table-data">Type</td>
                                             <td class="profile-ticket-list__table-data">Age(Discount)</td>
                                             <td class="profile-ticket-list__table-data">Date</td>
